
                              Kiji Scoring Release Notes
Version 0.7.0
    * SCORE-118. InternalFreshKijiTableReader now includes DEBUG level log messages for important
        events. Enable these messages through your slf4j configuration.
    * SCORE-117. ScoreFunction.score() now returns a TimestampedValue which optionally specifies the
        timestamp at which the value should be written to Kiji.
    * SCORE-113. KijiScoring now includes a KijiProducer implementation called
        org.kiji.scoring.lib.produce.ScoreFunctionProducer which can run a ScoreFunction in batch.
        ScoreFunctions to be run in batch must meet certain requirements which are detailed in
        ScoreFunctionProducer's JavaDoc.
    * SCORE-112. FreshKijiTableReader.get(EntityId, KijiDataRequest, long) has been replaced by
        get(EntityId, KijiDataRequest, org.kiji.scoring.FreshKijiTableReader.FreshRequestOptions)
        which allows for the specification of an overriding timestamp and string-string parameters
        which will override parameters available to the KijiFreshnessPolicy and ScoreFunction for
        this request only.
    * SCORE-111. FreshKijiTableReaderBuilder has been moved into the FreshKijiTableReader interface
        and is now FreshKijiTableReader.Builder. All other FreshKijiTableReaderBuilder APIs remain
        the same.
    * SCORE-97. KijiScoring has undergone significant API changes. The KijiFreshnessPolicy SPI has
        been redesigned and KijiProducer has been replaced by a new SPI called ScoreFunction. These
        SPIs are designed specifically to support the use-case of real time scoring in a multi
        threaded environment. To support the new SPIs KijiFreshnessPolicyRecord has been replaced
        with KijiFreshenerRecord and KijiFreshnessManager has undergone a complete API revamp to
        support the new record type. FreshTool was also changed to reflect the new records and SPIs.