@@ -19,7 +19,7 @@
   <properties>
     <kiji-delegation.version>1.0.0</kiji-delegation.version>
     <kiji-platforms.version>1.1.0</kiji-platforms.version>
-    <kiji-schema.version>1.3.1-SNAPSHOT</kiji-schema.version>
+    <kiji-schema.version>1.3.2-SNAPSHOT</kiji-schema.version>
     <kiji-mapreduce.version>1.0.0</kiji-mapreduce.version>
     <fake-hbase.version>0.1.0</fake-hbase.version>
     <jackson.version>1.9.13</jackson.version>
