@@ -1,6 +1,9 @@
 
                               Kiji Scoring Release Notes
 Version 0.7.0
+    * SCORE-128. InternalFreshKijiTableReader now uses a reader pool to read data to check for
+        freshness and score in order to guarantee thread safety. The pool size defaults to the same
+        as the FreshenerThreadPool size.
     * SCORE-118. InternalFreshKijiTableReader now includes DEBUG level log messages for important
         events. Enable these messages through your slf4j configuration.
     * SCORE-117. ScoreFunction.score() now returns a TimestampedValue which optionally specifies the
